update for phones and etc

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
     </nav>
 <div class="container mt-5">
   <div class="row">
-    <div class="col-7 offset-md-1">
+    <div class="col-lg offset-md-1">
       {% block content %}
         There is no any content
       {% endblock %}
@@ -108,7 +108,7 @@
       </nav>
       {% endif %}
     </div>
-    <div class="card col-md-3 offset-md-1" style="background-color:white;">
+    <div class="card col-lg-3 offset-md-1" style="background-color:white;">
       <div class="card-body">
         <h2 class="mb-5">Заголовок</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
