--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="shortcut icon" href="{% static 'img/blog_browser.ICO' %}" type="image/x-icon"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -22,129 +23,119 @@
   </head>
   <!-- style="background-color: #E8E8E8" -->
   <body style="background-color: #E8E8E8">
-      <!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="#">Carousel</a>
-          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-expanded="false">
+
+    <div class="full-height-wrapper">
+
+    
+
+        <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
+          <a class="navbar-brand" href="#"> Welcome!</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="navbar-collapse collapse" id="navbarCollapse" style="">
-            <ul class="navbar-nav mr-auto">
+
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'posts_list_url' %}">Posts</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="{% url 'tags_list_url' %}">Tags</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Логин">
-              <input class="form-control mr-sm-2" type="password" placeholder="Пароль">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Войти</button>
+            <!-- action - атрибут, который ведет на функцию обработчик т.е функция post_lists-->
+            <form class="form-inline my-2 my-lg-0" action="{% url 'posts_list_url' %}">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" name="search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
           </div>
-        </nav> -->
-        
-    <nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"> Welcome!</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        </nav>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg offset-md-1">
+          {% block content %}
+            There is no any content
+          {% endblock %}
 
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'posts_list_url' %}">Posts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'tags_list_url' %}">Tags</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <!-- action - атрибут, который ведет на функцию обработчик т.е функция post_lists-->
-        <form class="form-inline my-2 my-lg-0" action="{% url 'posts_list_url' %}">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" name="search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-lg offset-md-1">
-      {% block content %}
-        There is no any content
-      {% endblock %}
+          {% if is_paginated %}
+          
 
-      {% if is_paginated %}
-      
+          <nav aria-label="...">
+            <ul class="pagination">
+              <li class="page-item {% if not prev_url %} disabled {% endif %}">
+                <a class="page-link" href="{{ prev_url }}" tabindex="-1" aria-disabled="true">Previous</a>
+              </li>
+              {% for n in page_object.paginator.page_range %}
+                  {% if page_object.number == n %}
+                  <li class="page-item active" aria-current="page">
+                      <a class="page-link" href="?page={{ n }}">{{ n }} <span class="sr-only">(current)</span></a>
+                    </li>
+                  {% elif n > page_object.number|add:-2 and n < page_object.number|add:2 %}
+                  <!-- добавляем ВЛЕВО и ВПРАВО отступы по страницам -->
+              <li class="page-item">
+                <a class="page-link" href="?page={{ n }}">{{ n }}</a>
+              </li>
+                  {% endif %}
+              {% endfor %}
+              <!-- генерация кусочка ссылки -->
 
-      <nav aria-label="...">
-        <ul class="pagination">
-          <li class="page-item {% if not prev_url %} disabled {% endif %}">
-            <a class="page-link" href="{{ prev_url }}" tabindex="-1" aria-disabled="true">Previous</a>
-          </li>
-          {% for n in page_object.paginator.page_range %}
-              {% if page_object.number == n %}
-              <li class="page-item active" aria-current="page">
-                  <a class="page-link" href="?page={{ n }}">{{ n }} <span class="sr-only">(current)</span></a>
+              <li class="page-item {% if not next_url %} disabled {% endif %}">
+                  <a class="page-link" href="{{ next_url }}" tabindex="-1" aria-disabled="true">Next</a>
                 </li>
-              {% elif n > page_object.number|add:-2 and n < page_object.number|add:2 %}
-              <!-- добавляем ВЛЕВО и ВПРАВО отступы по страницам -->
-          <li class="page-item">
-            <a class="page-link" href="?page={{ n }}">{{ n }}</a>
-          </li>
-              {% endif %}
-          {% endfor %}
-          <!-- генерация кусочка ссылки -->
-
-          <li class="page-item {% if not next_url %} disabled {% endif %}">
-              <a class="page-link" href="{{ next_url }}" tabindex="-1" aria-disabled="true">Next</a>
-            </li>
-        </ul>
-      </nav>
-      {% endif %}
-    </div>
-    <div class="card col-lg-3 offset-md-1" style="background-color:white;">
-      <div class="card-body">
-        <h2 class="mb-5">Заголовок</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p><a href="#" class="btn btn-primary">Узнать больше &raquo;</a></p>
-        <i class="material-icons">healing</i>
-        <i class="material-icons">highlight</i>
-        
+            </ul>
+          </nav>
+          {% endif %}
+        </div>
+        <div class="card col-lg-3 offset-md-1" style="background-color:white;">
+          <div class="card-body">
+            <h2 class="mb-5">Заголовок</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p><a href="#" class="btn btn-primary">Узнать больше &raquo;</a></p>
+            <i class="material-icons">healing</i>
+            <i class="material-icons">highlight</i>
+            
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- авторизован и является ли админом -->
+    {% if request.user.is_authenticated and request.user.is_staff %}
+      <div class="admin-panel align-items-center">
+        <a href="/admin" class="btn btn-outline-info">Admin</a>
+            {% block admin-panel %}    
+            {% endblock %}
+      </div>
+    {% endif %}
+
+    <!-- <footer class="page-footer font-small blue" style="background-color:aqua">
+
+      
+      <div class="footer-copyright text-center py-3">© 2018 Copyright:
+        <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+      </div>
+    
+
+    </footer> -->
+
+    <footer class="page-footer font-small bg-primary">
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2018 Copyright:
+        <a href="https://mdbootstrap.com/education/bootstrap/" style="color: #fff"> MDBootstrap.com</a>
+      </div>
+      <!-- Copyright -->
+
+    </footer>
   </div>
-</div>
-
-<!-- авторизован и является ли админом -->
-{% if request.user.is_authenticated and request.user.is_staff %}
-  <div class="admin-panel align-items-center">
-    <a href="/admin" class="btn btn-outline-info">Admin</a>
-        {% block admin-panel %}    
-        {% endblock %}
-  </div>
-{% endif %}
-
-<!-- <footer class="page-footer font-small blue" style="background-color:aqua">
-
-  
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-  </div>
- 
-
-</footer> -->
-
   </body>
   
 </html>
